fixed text alignment in hex viewer

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -184,6 +184,7 @@ img {
 	margin-bottom: 2em;
 	border: 2px solid #b5b5b5;
 	display: inline-block;
+	text-align: left;
 }
 
 #hex {
@@ -212,11 +213,5 @@ img {
 .cont1 {
 	width: 100%;
 	display: inline-block;
-    text-align: center;
-}
-
-.cont2 {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+	text-align: center;
 }
